--- a/CS200_Adeyemi.ipynb
+++ b/CS200_Adeyemi.ipynb
@@ -75,6 +75,21 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "ffe64d6d-c7e7-42ef-8e32-28bcc9f4886d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#AUTOTUNE = tf.data.AUTOTUNE\n",
+    "\n",
+    "#train_ds = train_ds.cache().shuffle(100).prefetch(buffer_size=AUTOTUNE)\n",
+    "#val_ds = val_ds.cache().prefetch(buffer_size=AUTOTUNE)\n",
+    "\n",
+    "#normalization_layer = tf.keras.layers.Rescaling(1./255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "233e5cf6-bf78-450e-a846-61e66bfe3ccf",
    "metadata": {},
    "outputs": [
@@ -109,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c3bb1e74-9296-4c95-9218-76d653f92f68",
    "metadata": {},
    "outputs": [],
@@ -124,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "098a0bcc-3dc4-4b12-8417-0042177177f9",
    "metadata": {},
    "outputs": [
@@ -133,25 +148,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 130ms/step - accuracy: 0.5285 - loss: 0.6912 - val_accuracy: 0.8000 - val_loss: 0.5500\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 149ms/step - accuracy: 0.5829 - loss: 0.7084 - val_accuracy: 0.8000 - val_loss: 0.6307\n",
       "Epoch 2/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 128ms/step - accuracy: 0.8594 - loss: 0.4343 - val_accuracy: 0.7667 - val_loss: 0.5615\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 133ms/step - accuracy: 0.8807 - loss: 0.5244 - val_accuracy: 0.7667 - val_loss: 0.5085\n",
       "Epoch 3/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 141ms/step - accuracy: 0.9101 - loss: 0.2072 - val_accuracy: 0.7333 - val_loss: 0.7017\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 140ms/step - accuracy: 0.9100 - loss: 0.2550 - val_accuracy: 0.7333 - val_loss: 0.9185\n",
       "Epoch 4/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 168ms/step - accuracy: 0.8541 - loss: 0.4297 - val_accuracy: 0.7333 - val_loss: 0.6727\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 122ms/step - accuracy: 0.8004 - loss: 0.5547 - val_accuracy: 0.7667 - val_loss: 0.6793\n",
       "Epoch 5/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 112ms/step - accuracy: 0.9513 - loss: 0.1194 - val_accuracy: 0.8667 - val_loss: 0.5676\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 147ms/step - accuracy: 0.9650 - loss: 0.1171 - val_accuracy: 0.7667 - val_loss: 0.6113\n",
       "Epoch 6/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 111ms/step - accuracy: 0.9389 - loss: 0.1226 - val_accuracy: 0.8333 - val_loss: 0.6510\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 124ms/step - accuracy: 0.9264 - loss: 0.1261 - val_accuracy: 0.8000 - val_loss: 0.6368\n",
       "Epoch 7/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 112ms/step - accuracy: 0.9784 - loss: 0.0753 - val_accuracy: 0.8333 - val_loss: 0.7017\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 111ms/step - accuracy: 0.9586 - loss: 0.0941 - val_accuracy: 0.8000 - val_loss: 0.7406\n",
       "Epoch 8/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 120ms/step - accuracy: 0.9871 - loss: 0.0408 - val_accuracy: 0.8333 - val_loss: 0.8239\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 125ms/step - accuracy: 0.9871 - loss: 0.0483 - val_accuracy: 0.7667 - val_loss: 0.9037\n",
       "Epoch 9/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 117ms/step - accuracy: 0.9784 - loss: 0.0579 - val_accuracy: 0.8000 - val_loss: 0.8418\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 117ms/step - accuracy: 0.9812 - loss: 0.0690 - val_accuracy: 0.8000 - val_loss: 0.9676\n",
       "Epoch 10/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 114ms/step - accuracy: 0.9907 - loss: 0.0349 - val_accuracy: 0.7667 - val_loss: 1.1022\n"
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 137ms/step - accuracy: 0.9960 - loss: 0.0240 - val_accuracy: 0.8000 - val_loss: 1.0048\n"
      ]
     }
    ],
@@ -162,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7f3f1f6a-2b54-4fcd-8100-66cd504e7d09",
    "metadata": {},
    "outputs": [
@@ -170,10 +185,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 35ms/step - accuracy: 1.0000 - loss: 0.0742\n",
-      "\u001b[1m2/2\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 44ms/step - accuracy: 0.7819 - loss: 0.8551\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 35ms/step - accuracy: 1.0000 - loss: 0.0084\n",
+      "\u001b[1m2/2\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 42ms/step - accuracy: 0.8250 - loss: 0.8877\n",
       "Final Training Accuracy: 100.00%\n",
-      "Final Validation Accuracy: 76.67%\n"
+      "Final Validation Accuracy: 80.00%\n"
      ]
     }
    ],
@@ -188,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ed3414c5-9ff1-4ee6-b062-12e2e3e72653",
    "metadata": {},
    "outputs": [],
@@ -214,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "e8ecb3aa-f201-47e5-b86f-963042e9c01c",
    "metadata": {},
    "outputs": [
@@ -222,8 +237,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 190ms/step\n",
-      "Prediction: elliptical (Confidence: 0.98)\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 167ms/step\n",
+      "Prediction: elliptical (Confidence: 1.00)\n"
      ]
     },
     {
@@ -232,18 +247,18 @@
        "'elliptical'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict_image(\"988001.jpg\")"
+    "predict_image(\"test/988001.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "d42203ea-3c73-49a3-8b12-01efa9b18eb0",
    "metadata": {},
    "outputs": [
@@ -251,8 +266,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 56ms/step\n",
-      "Prediction: spiral (Confidence: 1.00)\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 42ms/step\n",
+      "Prediction: spiral (Confidence: 0.99)\n"
      ]
     },
     {
@@ -261,18 +276,18 @@
        "'spiral'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict_image(\"987261.jpg\")"
+    "predict_image(\"test/987261.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "5dcb0b06-25e1-4258-9ad0-24fb2be5177b",
    "metadata": {},
    "outputs": [
@@ -280,8 +295,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 52ms/step\n",
-      "Prediction: elliptical (Confidence: 0.75)\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 36ms/step\n",
+      "Prediction: elliptical (Confidence: 0.99)\n"
      ]
     },
     {
@@ -290,18 +305,18 @@
        "'elliptical'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict_image(\"100150.jpg\")"
+    "predict_image(\"test/100150.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "36c68c60-84cb-4a73-8771-fd8bae10c4c5",
    "metadata": {},
    "outputs": [
@@ -309,7 +324,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 54ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 37ms/step\n",
       "Prediction: spiral (Confidence: 1.00)\n"
      ]
     },
@@ -319,18 +334,18 @@
        "'spiral'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict_image(\"101007.jpg\")"
+    "predict_image(\"test/101007.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "id": "29f5ba02-9f0d-42ab-8dcf-d5fa321af39a",
    "metadata": {},
    "outputs": [
@@ -338,8 +353,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 52ms/step\n",
-      "Prediction: elliptical (Confidence: 0.95)\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 34ms/step\n",
+      "Prediction: elliptical (Confidence: 0.99)\n"
      ]
     },
     {
@@ -348,19 +363,83 @@
        "'elliptical'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict_image(\"101623.jpg\")\n"
+    "predict_image(\"test/101623.jpg\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "3bb89067-face-4d06-b563-5223578cc168",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 35ms/step\n",
+      "Prediction: spiral (Confidence: 1.00)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'spiral'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_image(\"test/100765.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "003edb4a-5f37-4571-8ea0-2394942b1f6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(\"galaxy_model.keras\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bb89067-face-4d06-b563-5223578cc168",
+   "id": "e826becb-4524-4e47-ab8b-a80941dedcf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict_image(\"test_flask_image.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9622db99-a639-48c5-ada6-54a1b9d67275",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = load_img(\"test_flask_image.jpg\", target_size=(128, 128))\n",
+    "img = img.convert(\"RGB\")\n",
+    "img_array = img_to_array(img)\n",
+    "img_array = np.expand_dims(img_array, axis=0)\n",
+    "\n",
+    "model.predict(img_array)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "139afedc-0076-4bed-8118-67c5db01cc9c",
    "metadata": {},
    "outputs": [],
    "source": []
