--- a/CS200_Adeyemi.ipynb
+++ b/CS200_Adeyemi.ipynb
@@ -75,21 +75,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ffe64d6d-c7e7-42ef-8e32-28bcc9f4886d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#AUTOTUNE = tf.data.AUTOTUNE\n",
-    "\n",
-    "#train_ds = train_ds.cache().shuffle(100).prefetch(buffer_size=AUTOTUNE)\n",
-    "#val_ds = val_ds.cache().prefetch(buffer_size=AUTOTUNE)\n",
-    "\n",
-    "#normalization_layer = tf.keras.layers.Rescaling(1./255)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "233e5cf6-bf78-450e-a846-61e66bfe3ccf",
    "metadata": {},
    "outputs": [
@@ -124,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c3bb1e74-9296-4c95-9218-76d653f92f68",
    "metadata": {},
    "outputs": [],
@@ -139,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "098a0bcc-3dc4-4b12-8417-0042177177f9",
    "metadata": {},
    "outputs": [
@@ -148,25 +133,18 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 149ms/step - accuracy: 0.5829 - loss: 0.7084 - val_accuracy: 0.8000 - val_loss: 0.6307\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 139ms/step - accuracy: 0.5784 - loss: 0.7106 - val_accuracy: 0.8000 - val_loss: 0.6505\n",
       "Epoch 2/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 133ms/step - accuracy: 0.8807 - loss: 0.5244 - val_accuracy: 0.7667 - val_loss: 0.5085\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 97ms/step - accuracy: 0.8382 - loss: 0.6066 - val_accuracy: 0.8000 - val_loss: 0.4769\n",
       "Epoch 3/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 140ms/step - accuracy: 0.9100 - loss: 0.2550 - val_accuracy: 0.7333 - val_loss: 0.9185\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 98ms/step - accuracy: 0.9079 - loss: 0.3371 - val_accuracy: 0.7333 - val_loss: 0.6686\n",
       "Epoch 4/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 122ms/step - accuracy: 0.8004 - loss: 0.5547 - val_accuracy: 0.7667 - val_loss: 0.6793\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 107ms/step - accuracy: 0.8050 - loss: 0.4706 - val_accuracy: 0.8333 - val_loss: 0.5182\n",
       "Epoch 5/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 147ms/step - accuracy: 0.9650 - loss: 0.1171 - val_accuracy: 0.7667 - val_loss: 0.6113\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 104ms/step - accuracy: 0.9413 - loss: 0.1474 - val_accuracy: 0.8000 - val_loss: 0.5627\n",
       "Epoch 6/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 124ms/step - accuracy: 0.9264 - loss: 0.1261 - val_accuracy: 0.8000 - val_loss: 0.6368\n",
-      "Epoch 7/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 111ms/step - accuracy: 0.9586 - loss: 0.0941 - val_accuracy: 0.8000 - val_loss: 0.7406\n",
-      "Epoch 8/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 125ms/step - accuracy: 0.9871 - loss: 0.0483 - val_accuracy: 0.7667 - val_loss: 0.9037\n",
-      "Epoch 9/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 117ms/step - accuracy: 0.9812 - loss: 0.0690 - val_accuracy: 0.8000 - val_loss: 0.9676\n",
-      "Epoch 10/10\n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 137ms/step - accuracy: 0.9960 - loss: 0.0240 - val_accuracy: 0.8000 - val_loss: 1.0048\n"
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 98ms/step - accuracy: 0.9334 - loss: 0.1880 - val_accuracy: 0.7667 - val_loss: 0.7886\n",
+      "Epoch 7/10\n"
      ]
     }
    ],
@@ -177,21 +155,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7f3f1f6a-2b54-4fcd-8100-66cd504e7d09",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 35ms/step - accuracy: 1.0000 - loss: 0.0084\n",
-      "\u001b[1m2/2\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 42ms/step - accuracy: 0.8250 - loss: 0.8877\n",
-      "Final Training Accuracy: 100.00%\n",
-      "Final Validation Accuracy: 80.00%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "final_train_loss, final_train_acc = model.evaluate(train_ds)\n",
     "final_val_loss, final_val_acc = model.evaluate(val_ds)\n",
@@ -203,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ed3414c5-9ff1-4ee6-b062-12e2e3e72653",
    "metadata": {},
    "outputs": [],
@@ -229,181 +196,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "e8ecb3aa-f201-47e5-b86f-963042e9c01c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 167ms/step\n",
-      "Prediction: elliptical (Confidence: 1.00)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'elliptical'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "predict_image(\"test/988001.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "d42203ea-3c73-49a3-8b12-01efa9b18eb0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 42ms/step\n",
-      "Prediction: spiral (Confidence: 0.99)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'spiral'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "predict_image(\"test/987261.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "5dcb0b06-25e1-4258-9ad0-24fb2be5177b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 36ms/step\n",
-      "Prediction: elliptical (Confidence: 0.99)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'elliptical'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "predict_image(\"test/100150.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "36c68c60-84cb-4a73-8771-fd8bae10c4c5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 37ms/step\n",
-      "Prediction: spiral (Confidence: 1.00)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'spiral'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "predict_image(\"test/101007.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "29f5ba02-9f0d-42ab-8dcf-d5fa321af39a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 34ms/step\n",
-      "Prediction: elliptical (Confidence: 0.99)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'elliptical'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "predict_image(\"test/101623.jpg\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "3bb89067-face-4d06-b563-5223578cc168",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 35ms/step\n",
-      "Prediction: spiral (Confidence: 1.00)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'spiral'"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "predict_image(\"test/100765.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "003edb4a-5f37-4571-8ea0-2394942b1f6e",
    "metadata": {},
    "outputs": [],
