--- a/CS200_Adeyemi.ipynb
+++ b/CS200_Adeyemi.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "098a0bcc-3dc4-4b12-8417-0042177177f9",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,14 @@
       "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 104ms/step - accuracy: 0.9413 - loss: 0.1474 - val_accuracy: 0.8000 - val_loss: 0.5627\n",
       "Epoch 6/10\n",
       "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 98ms/step - accuracy: 0.9334 - loss: 0.1880 - val_accuracy: 0.7667 - val_loss: 0.7886\n",
-      "Epoch 7/10\n"
+      "Epoch 7/10\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 120ms/step - accuracy: 0.9457 - loss: 0.1642 - val_accuracy: 0.7667 - val_loss: 0.6504\n",
+      "Epoch 8/10\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 102ms/step - accuracy: 0.9929 - loss: 0.0643 - val_accuracy: 0.8000 - val_loss: 0.7869\n",
+      "Epoch 9/10\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 104ms/step - accuracy: 0.9530 - loss: 0.0973 - val_accuracy: 0.8000 - val_loss: 0.7497\n",
+      "Epoch 10/10\n",
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 115ms/step - accuracy: 0.9717 - loss: 0.0787 - val_accuracy: 0.7667 - val_loss: 0.9487\n"
      ]
     }
    ],
@@ -155,10 +162,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7f3f1f6a-2b54-4fcd-8100-66cd504e7d09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 29ms/step - accuracy: 0.9300 - loss: 0.1437\n",
+      "\u001b[1m2/2\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 37ms/step - accuracy: 0.7819 - loss: 0.7658\n",
+      "Final Training Accuracy: 95.12%\n",
+      "Final Validation Accuracy: 76.67%\n"
+     ]
+    }
+   ],
    "source": [
     "final_train_loss, final_train_acc = model.evaluate(train_ds)\n",
     "final_val_loss, final_val_acc = model.evaluate(val_ds)\n",
@@ -170,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ed3414c5-9ff1-4ee6-b062-12e2e3e72653",
    "metadata": {},
    "outputs": [],
@@ -196,67 +214,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e8ecb3aa-f201-47e5-b86f-963042e9c01c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 99ms/step\n",
+      "Prediction: elliptical (Confidence: 0.93)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'elliptical'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "predict_image(\"test/988001.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d42203ea-3c73-49a3-8b12-01efa9b18eb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 84ms/step\n",
+      "Prediction: spiral (Confidence: 0.99)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'spiral'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "predict_image(\"test/987261.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5dcb0b06-25e1-4258-9ad0-24fb2be5177b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 40ms/step\n",
+      "Prediction: elliptical (Confidence: 0.75)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'elliptical'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "predict_image(\"test/100150.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "36c68c60-84cb-4a73-8771-fd8bae10c4c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 42ms/step\n",
+      "Prediction: spiral (Confidence: 1.00)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'spiral'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "predict_image(\"test/101007.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "29f5ba02-9f0d-42ab-8dcf-d5fa321af39a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 37ms/step\n",
+      "Prediction: elliptical (Confidence: 0.87)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'elliptical'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "predict_image(\"test/101623.jpg\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3bb89067-face-4d06-b563-5223578cc168",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 35ms/step\n",
+      "Prediction: spiral (Confidence: 1.00)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'spiral'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "predict_image(\"test/100765.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "003edb4a-5f37-4571-8ea0-2394942b1f6e",
    "metadata": {},
    "outputs": [],
@@ -266,20 +398,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "e826becb-4524-4e47-ab8b-a80941dedcf4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 42ms/step\n",
+      "Prediction: spiral (Confidence: 0.99)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'spiral'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "predict_image(\"test_flask_image.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "9622db99-a639-48c5-ada6-54a1b9d67275",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 50ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.99491704, 0.00508303]], dtype=float32)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "img = load_img(\"test_flask_image.jpg\", target_size=(128, 128))\n",
     "img = img.convert(\"RGB\")\n",
